<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.menu.ui.home.HomeFragment"
    tools:ignore="MissingDefaultResource">

    <data>
        <variable
            name="vmHome"
            type="id.asiatek.asiatrans.viewmodel.HomeFragmentViewModel" />
    </data>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f0f0f0">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3CB64B"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/lytToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/logoMini"
                        android:layout_width="75dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        app:srcCompat="@drawable/ic_asia_trans_border" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:background="@drawable/rectangle_input"
                        android:drawableLeft="@drawable/places_ic_search"
                        android:drawablePadding="5dp"
                        android:hint="Search"
                        android:paddingLeft="10dp"></EditText>

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        app:srcCompat="@drawable/ic_bell" />

                </LinearLayout>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/payment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_border_square">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_doku"></ImageView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtSaldo"
                        android:textSize="@dimen/_7sdp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rp. 4.000.000"
                        android:textSize="@dimen/_9sdp"></TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_border_square">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_wallet"></ImageView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtSaldo"
                        android:textSize="@dimen/_7sdp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rp. 4.000.000"
                        android:textSize="@dimen/_9sdp"></TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/custom_border_category"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payment">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ketgori"
                android:textStyle="bold"
                android:textSize="@dimen/_13sdp"></TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="10dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/ic_clothes"
                        android:background="@drawable/custom_border_category"></ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtFashion"
                        android:textSize="@dimen/_9sdp"
                        android:layout_gravity="center"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="10dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/ic_accessories"
                        android:background="@drawable/custom_border_category"></ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtAccessories"
                        android:textSize="@dimen/_9sdp"
                        android:layout_gravity="center"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="10dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/ic_sport"
                        android:background="@drawable/custom_border_category"></ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtSport"
                        android:textSize="@dimen/_9sdp"
                        android:layout_gravity="center"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="10dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/ic_cosmetics"
                        android:background="@drawable/custom_border_category"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/txtBeauty"
                        android:textSize="@dimen/_9sdp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/ic_game"
                        android:background="@drawable/custom_border_category"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/txtGame"
                        android:textSize="@dimen/_9sdp"></TextView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="10dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/ic_electronic"
                        android:background="@drawable/custom_border_category"></ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtElectronic"
                        android:textSize="@dimen/_9sdp"
                        android:layout_gravity="center"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="10dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/ic_computer"
                        android:background="@drawable/custom_border_category"></ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtComputer"
                        android:textSize="@dimen/_9sdp"
                        android:layout_gravity="center"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="10dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/ic_handphone"
                        android:background="@drawable/custom_border_category"></ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtHandphone"
                        android:textSize="@dimen/_9sdp"
                        android:layout_gravity="center"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="10dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/ic_bike"
                        android:background="@drawable/custom_border_category"></ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtBike"
                        android:textSize="@dimen/_9sdp"
                        android:layout_gravity="center"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/ic_car"
                        android:background="@drawable/custom_border_category"></ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtCar"
                        android:textSize="@dimen/_9sdp"
                        android:layout_gravity="center"></TextView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/category">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/txtRekomendasi"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="@dimen/_13sdp"></TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toBottomOf="@id/category"
                app:layout_constraintLeft_toLeftOf="parent"
                app:adapter="@{vmHome.items}">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
</layout>