<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginActivity"
    tools:ignore="MissingDefaultResource">

    <data>

        <variable
            name="vmlogin"
            type="id.asiatek.asiatrans.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wallpaper_login">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.23">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-30dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="192dp"
                        android:layout_height="170dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/background_logo_asia_trans"
                        app:srcCompat="@drawable/ic_logo_asia_trans" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteY="160dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/txtPhone"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="372dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/rectangle_input"
                            android:ems="10"
                            android:hint="@string/txtNomor"
                            android:inputType="phone"
                            android:textAlignment="center" />

                        <EditText
                            android:id="@+id/txtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_below="@+id/txtPhone"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/rectangle_input"
                            android:ems="10"
                            android:hint="@string/txtPassword"
                            android:inputType="textPassword"
                            android:textAlignment="center" />

                        <LinearLayout
                            android:id="@+id/lytLinear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txtPassword"
                            android:layout_marginTop="20dp"
                            android:orientation="horizontal"
                            android:weightSum="6">

                            <Button
                                android:id="@+id/btnLogin"
                                android:layout_width="90dp"
                                android:layout_height="55dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="5dp"
                                android:layout_weight="3"
                                android:background="@drawable/button_green_trans_login"
                                android:text="@string/btnLogin"
                                android:textColor="@color/white" />

                            <Button
                                android:id="@+id/btnRegister"
                                android:layout_width="90dp"
                                android:layout_height="55dp"
                                android:layout_marginRight="10dp"
                                android:layout_weight="3"
                                android:background="@drawable/button_green_trans"
                                android:text="@string/btnRegister"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/lytLinear"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical"
                            android:weightSum="5">

                            <com.google.android.gms.common.SignInButton
                                android:id="@+id/button3"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_weight="1"
                                android:text="Button" />
                        </LinearLayout>
                    </RelativeLayout>
                </ScrollView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>